Clicking a search result link in Yelp shows: "The page ‘?preferences’ was not found in the document"
About me
- Geary version: 0.12.0-1ubuntu1 bionic
- Installation method: Synaptic Package
- Your desktop: xfce
- Your operating system and version: Mint 19
- Email provider: Gmail
Steps to reproduce
- Open geary Help
- click search button
- Type spell and hit Enter key
- Get "Preferences" in search results
- Click "Preferences"
What is the expected behavior?
Receive help page about Preferences
What is the current bug behavior?
Receive:
"The page ‘?preferences’ was not found in the document ‘ghelp:geary/’."
Edited by Andre Klapper