Fix links to search results for ghelp documents

Fixes https://gitlab.gnome.org/GNOME/yelp/-/issues/137